# TgBotVA

./: .gitignore  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml  render.yaml
backend/app/: main.py
backend/app/api/: auth.py  deps.py  projects.py  settings.py  tasks.py  webhooks.py  workspaces.py
backend/app/bots/: keyboards.py  manager.py
backend/app/bots/handlers/: __init__.py  projects.py  settings.py  start.py  tasks.py
backend/app/core/: config.py  limiter.py  security.py
backend/app/db/: models.py  repositories.py  session.py
backend/app/services/: ai_service.py
backend/app/tasks/: scheduler.py
docs/: SETUP.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/admin/: page.tsx
frontend/src/app/(app)/admin/settings/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/projects/: page.tsx
frontend/src/app/(app)/tasks/: page.tsx
frontend/src/app/app/: layout.tsx  page.tsx
frontend/src/app/app/_components/: CreateTaskSheet.tsx  ProjectsSheet.tsx  SettingsSheet.tsx  TaskDetailScreen.tsx
frontend/src/components/: Sidebar.tsx  StatsCards.tsx  TaskCard.tsx  WorkspaceSelector.tsx
frontend/src/lib/: api.ts  telegram.ts  tmaAuth.ts  useCreateTask.ts  useMembers.ts  useSettings.ts  useTaskDetail.ts  useTgBackButton.ts  useTgMainButton.ts  useTmaProjects.ts  useTmaTasks.ts  useWorkspace.ts
supabase/: schema.sql
